--- a/package.json
+++ b/package.json
@@ -9,15 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "@heroicons/react": "^2.1.3",
+    "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.17.0",
+    "canvas": "^2.11.2",
+    "cors": "^2.8.5",
+    "d3": "^7.9.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase": "^10.12.3",
+    "framer-motion": "^11.0.24",
+    "konva": "^9.3.6",
+    "next": "^14.2.3",
+    "nodemailer": "^6.9.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-force-graph": "^1.29.3",
+    "react-force-graph-2d": "^1.25.5",
+    "react-konva": "^18.2.10",
+    "react-type-animation": "^3.2.0",
+    "react-use-measure": "^2.1.1",
+    "react-vertical-timeline-component": "^3.6.0",
+    "sharp": "^0.33.4",
+    "source-map-loader": "^5.0.0",
+    "ts-loader": "^9.5.1"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "^14.2.3",
+    "file-loader": "^6.2.0",
+    "postcss": "^8",
+    "raw-loader": "^4.0.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.4.5"
   }
 }
