added first post and logoic for pages

--- a/package.json
+++ b/package.json
@@ -19,20 +19,37 @@
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "framer-motion": "^11.0.24",
+    "gatsby-image": "^3.11.0",
+    "gatsby-link": "^5.13.1",
+    "github-markdown-css": "^5.6.1",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.10.0",
     "konva": "^9.3.6",
-    "next": "^14.2.3",
+    "markdown-it": "^14.1.0",
+    "markdown-it-highlightjs": "^4.1.0",
+    "markdown-it-prism": "^2.3.0",
+    "marked": "^14.0.0",
+    "next": "^14.2.5",
     "nodemailer": "^6.9.14",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.29.3",
     "react-force-graph-2d": "^1.25.5",
+    "react-icons": "^5.3.0",
     "react-konva": "^18.2.10",
+    "react-markdown": "^9.0.1",
     "react-type-animation": "^3.2.0",
     "react-use-measure": "^2.1.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sharp": "^0.33.4",
     "source-map-loader": "^5.0.0",
-    "ts-loader": "^9.5.1"
+    "styled-components": "^6.1.12",
+    "ts-loader": "^9.5.1",
+    "unist-util-visit-parents": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
