--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.3",
     "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.0",
+    "@vercel/og": "^0.6.2",
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
